--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "estgroupe/laravel-taggable",
-	"description": "Use PHP traits to extend Laravel Eloquent Models to allow Tags. Models can be marked as Taggable.",
+	"description": "Taggable Trait for using tag inside Laravel Eloquent models, with Baum's Nested Set pattern support.",
 	"license": "MIT",
 	"homepage": "https://smartersoftware.net/packages/laravel-tagging-taggable",
 	"keywords": ["tag", "tags", "tagging", "laravel", "taggable", "tagged", "eloquent", "laravel5"],
